Add enforcement of requiring prod to be only main CI
new requirement again

--- a/1es-azure-pipeline.yml
+++ b/1es-azure-pipeline.yml
@@ -67,6 +67,8 @@ extends:
         enabled: true
       componentgovernance:
         ignoreDirectories: '.vscode-test/**'
+      featureFlags:
+        branchValidation: enforceInAllJobs
     stages:
     - stage: Internal
       jobs:
