move back to SignType
the docs show using 'signType' but 'SignType' is the msbuild property and is also working in other prod pipelines today

--- a/1es-azure-pipeline.yml
+++ b/1es-azure-pipeline.yml
@@ -102,7 +102,7 @@ extends:
             image: 1es-windows-2022
             os: windows
           useOneEngineeringPool: true
-          signType: real
+          SignType: real
           signWithProd: true
       - template: pipeline-templates/sbom.yaml@self
         parameters:
