Try using signing template

--- a/pipeline-templates/package-vsix.yaml
+++ b/pipeline-templates/package-vsix.yaml
@@ -18,6 +18,15 @@ jobs:
       displayName: '📂 Publish .VSIX'
       targetPath: '$(Build.ArtifactStagingDirectory)'
       artifactName: '$(dir-name)'
+    mb:
+      signing:
+        enabled: true
+        # Set signType to real if the build is a CI, otherwise use test
+        ${{ if eq(variables['Build.Reason'], 'IndividualCI') }}:
+          signType: real
+          signWithProd: true
+        ${{ else }}:
+          signType: test
   steps:
   - template: install-node.yaml
   - bash: |
