Migrate to input instead of task. Input task should work as well.

--- a/pipeline-templates/package-vsix.yaml
+++ b/pipeline-templates/package-vsix.yaml
@@ -16,7 +16,7 @@ jobs:
     outputs:
     - output: pipelineArtifact
       displayName: '📂 Publish .VSIX'
-      targetPath: '$(Build.ArtifactStagingDirectory)'
+      targetPath: '$(System.DefaultWorkingDirectory)'
       artifactName: '$(dir-name)'
     mb:
       signing:
