--- a/pipeline-templates/list-file-structure.yaml
+++ b/pipeline-templates/list-file-structure.yaml
@@ -20,8 +20,7 @@ steps:
         function Show-DirectoryTree {
           param(
             [string]$Path,
-            [string]$Title,
-            [string]$Prefix = ""
+            [string]$Title
           )
 
           Write-Host "$Title" -ForegroundColor Cyan
@@ -30,12 +29,18 @@ steps:
 
           if (Test-Path $Path) {
             try {
-              $items = Get-ChildItem -Path $Path -Recurse | Sort-Object FullName
+              $items = Get-ChildItem -Path $Path -Recurse -ErrorAction SilentlyContinue | Sort-Object FullName
               $totalFiles = ($items | Where-Object { -not $_.PSIsContainer }).Count
               $totalDirs = ($items | Where-Object { $_.PSIsContainer }).Count
 
               Write-Host "📊 Summary: $totalDirs directories, $totalFiles files" -ForegroundColor Green
               Write-Host ""
+
+              if ($items.Count -eq 0) {
+                Write-Host "📭 Directory is empty" -ForegroundColor Gray
+                Write-Host ""
+                return
+              }
 
               # Group by directory for better structure
               $directories = $items | Where-Object { $_.PSIsContainer } | Sort-Object FullName
@@ -46,40 +51,49 @@ steps:
                 Write-Host "📁 Directory Structure:" -ForegroundColor Magenta
                 foreach ($dir in $directories) {
                   $relativePath = $dir.FullName.Replace($Path, "").TrimStart('\', '/')
-                  $depth = ($relativePath.Split('\', '/') | Where-Object { $_ -ne "" }).Count
-                  $indent = "  " * $depth + "├── "
-                  Write-Host "$indent$($dir.Name)/" -ForegroundColor Blue
+                  if ($relativePath) {
+                    $depth = ($relativePath.Split([System.IO.Path]::DirectorySeparatorChar, [System.IO.Path]::AltDirectorySeparatorChar) | Where-Object { $_ -ne "" }).Count
+                    $indent = "  " * $depth + "├── "
+                    Write-Host "$indent$($dir.Name)/" -ForegroundColor Blue
+                  }
                 }
                 Write-Host ""
               }
 
               # Show files grouped by directory
-              Write-Host "📄 Files:" -ForegroundColor Magenta
-              $filesByDir = $files | Group-Object { Split-Path $_.FullName -Parent }
+              if ($files.Count -gt 0) {
+                Write-Host "📄 Files:" -ForegroundColor Magenta
+                $filesByDir = $files | Group-Object { Split-Path $_.FullName -Parent } | Sort-Object Name
 
-              foreach ($group in ($filesByDir | Sort-Object Name)) {
-                $relativeDirPath = $group.Name.Replace($Path, "").TrimStart('\', '/')
-                if ($relativeDirPath -eq "") {
-                  Write-Host "  📂 Root:" -ForegroundColor Yellow
-                } else {
-                  Write-Host "  📂 $relativeDirPath:" -ForegroundColor Yellow
+                foreach ($group in $filesByDir) {
+                  $relativeDirPath = $group.Name.Replace($Path, "").TrimStart('\', '/')
+                  if ($relativeDirPath -eq "") {
+                    Write-Host "  📂 Root:" -ForegroundColor Yellow
+                  } else {
+                    Write-Host "  📂 ${relativeDirPath}:" -ForegroundColor Yellow
+                  }
+
+                  foreach ($file in ($group.Group | Sort-Object Name)) {
+                    try {
+                      $size = if ($file.Length -lt 1KB) { "$($file.Length) B" }
+                             elseif ($file.Length -lt 1MB) { "{0:N1} KB" -f ($file.Length / 1KB) }
+                             else { "{0:N1} MB" -f ($file.Length / 1MB) }
+
+                      Write-Host "    ├── $($file.Name) ($size)" -ForegroundColor White
+                    }
+                    catch {
+                      Write-Host "    ├── $($file.Name) (size unknown)" -ForegroundColor Gray
+                    }
+                  }
+                  Write-Host ""
                 }
-
-                foreach ($file in ($group.Group | Sort-Object Name)) {
-                  $size = if ($file.Length -lt 1KB) { "$($file.Length) B" }
-                         elseif ($file.Length -lt 1MB) { "{0:N1} KB" -f ($file.Length / 1KB) }
-                         else { "{0:N1} MB" -f ($file.Length / 1MB) }
-
-                  Write-Host "    ├── $($file.Name) ($size)" -ForegroundColor White
-                }
-                Write-Host ""
               }
             }
             catch {
-              Write-Host "❌ Error accessing directory: $_" -ForegroundColor Red
+              Write-Host "❌ Error accessing directory: $($_.Exception.Message)" -ForegroundColor Red
             }
           } else {
-            Write-Host "❌ Directory does not exist" -ForegroundColor Red
+            Write-Host "❌ Directory does not exist: $Path" -ForegroundColor Red
           }
           Write-Host "=================================================================" -ForegroundColor Cyan
           Write-Host ""
