--- a/pipeline-templates/package-vsix.yaml
+++ b/pipeline-templates/package-vsix.yaml
@@ -24,6 +24,7 @@ jobs:
         signType: real
         signWithProd: true
         zipSources: false
+        feedSource: https://dnceng.pkgs.visualstudio.com/_packaging/MicroBuildToolset/nuget/v3/index.json
   steps:
   - template: install-node.yaml
   - bash: |
