Add list-file-structure.yaml to make it easier to diagnose pipeline issues and see file structure on disk

--- a/pipeline-templates/publish.yaml
+++ b/pipeline-templates/publish.yaml
@@ -27,6 +27,7 @@ jobs:
       inputs:
         path: '$(System.ArtifactsDirectory)'
     - template: install-node.yaml
+    - template: list-file-structure.yaml
     - bash: |
         VERSION=`node -p "require('./package.json').version"`
         npm version $VERSION --allow-same-version
