--- a/pipeline-templates/prepare-signing.yaml
+++ b/pipeline-templates/prepare-signing.yaml
@@ -15,6 +15,7 @@ steps:
       zipSources: false
       feedSource: https://dnceng.pkgs.visualstudio.com/_packaging/MicroBuildToolset/nuget/v3/index.json
       ${{ if eq(variables['Build.Reason'], 'IndividualCI') }}:
+        signWithProd: true
         ConnectedPMEServiceName: c24de2a5-cc7a-493d-95e4-8e5ff5cad2bc
     env:
       SignType: ${{ parameters.SignType }}
