--- a/pipeline-templates/prepare-signing.yaml
+++ b/pipeline-templates/prepare-signing.yaml
@@ -14,8 +14,9 @@ steps:
       signType: ${{ parameters.SignType }}
       zipSources: false
       feedSource: https://dnceng.pkgs.visualstudio.com/_packaging/MicroBuildToolset/nuget/v3/index.json
-      signWithProd: true
-      ConnectedPMEServiceName: 248d384a-b39b-46e3-8ad5-c2c210d5e7ca
+      ${{ if eq(variables['Build.Reason'], 'IndividualCI') }}:
+        signWithProd: true
+        ConnectedPMEServiceName: 248d384a-b39b-46e3-8ad5-c2c210d5e7ca
     env:
       SignType: ${{ parameters.SignType }}
       TeamName: DotNetCore
