--- a/pipeline-templates/prepare-signing.yaml
+++ b/pipeline-templates/prepare-signing.yaml
@@ -14,9 +14,9 @@ steps:
       signType: ${{ parameters.SignType }}
       zipSources: false
       feedSource: https://dnceng.pkgs.visualstudio.com/_packaging/MicroBuildToolset/nuget/v3/index.json
+      azureSubscription: 'MicroBuild Signing Task (DevDiv)'
       ${{ if eq(variables['Build.Reason'], 'IndividualCI') }}:
-        signWithProd: true
-        ConnectedPMEServiceName: 248d384a-b39b-46e3-8ad5-c2c210d5e7ca
+        ConnectedPMEServiceName: c24de2a5-cc7a-493d-95e4-8e5ff5cad2bc
     env:
       SignType: ${{ parameters.SignType }}
       TeamName: DotNetCore
