New policy to block intra

--- a/1es-azure-pipeline.yml
+++ b/1es-azure-pipeline.yml
@@ -67,6 +67,8 @@ extends:
         enabled: true
       componentgovernance:
         ignoreDirectories: '.vscode-test/**'
+      settings:
+        networkIsolationPolicy: CFSClean
     stages:
     - stage: Internal
       jobs:
