--- a/1es-azure-pipeline.yml
+++ b/1es-azure-pipeline.yml
@@ -68,7 +68,7 @@ extends:
       componentgovernance:
         ignoreDirectories: '.vscode-test/**'
     settings:
-      networkIsolationPolicy: CFSClean
+      networkIsolationPolicy: AzureActiveDirectory,AzureKeyVault,AzureResourceManager,AzureStorage,GitHub,CFSClean
     stages:
     - stage: Internal
       jobs:
