--- a/.gitignore
+++ b/.gitignore
@@ -48,5 +48,5 @@ install.*
 vscode-dotnet-runtime-library/install scripts/dotnet-install.*
 vscode-dotnet-runtime-extension/LICENSE.txt
 vscode-dotnet-sdk-extension/LICENSE.txt
-!./vscode-dotnet-runtime-library/src/test/mocks/MockMutexHolder.js
+!vscode-dotnet-runtime-library/src/test/mocks/MockMutexHolder.js
 .vscode/launch.json
