--- a/.gitignore
+++ b/.gitignore
@@ -30,7 +30,6 @@ project.lock.json
 *.ipch
 *.js
 !.eslintrc.js
-!./vscode-dotnet-runtime-library/src/test/mocks/MockMutexHolder.js
 *.d.ts
 *.js.map
 .build/
@@ -47,6 +46,7 @@ install.*
 .vscode-test/
 *.vsix
 vscode-dotnet-runtime-library/install scripts/dotnet-install.*
+!/vscode-dotnet-runtime-library/src/test/mocks/MockMutexHolder.js
 vscode-dotnet-runtime-extension/LICENSE.txt
 vscode-dotnet-sdk-extension/LICENSE.txt
 .vscode/launch.json
