Add command to reset update delay timer
also fixes patch versions

--- a/sample/package.json
+++ b/sample/package.json
@@ -7,7 +7,7 @@
 		"url": "https://github.com/dotnet/vscode-dotnet-runtime.git"
 	},
 	"license": "MIT",
-	"version": "2.3.7",
+	"version": "3.0.0",
 	"publisher": "ms-dotnettools",
 	"engines": {
 		"vscode": "^1.75.0"
@@ -132,7 +132,7 @@
 		"compile": "npm run clean && tsc -p ./",
 		"watch": "npm run clean && tsc -watch -p ./",
 		"test": "npm run compile && node ./node_modules/vscode/bin/test",
-		"clean": "rimraf out"
+		"clean": "npx rimraf out"
 	},
 	"dependencies": {
 		"@vscode/vsce": "^2.19.0",
