add network isolation policy

--- a/1es-azure-pipeline.yml
+++ b/1es-azure-pipeline.yml
@@ -67,6 +67,8 @@ extends:
         enabled: true
       componentgovernance:
         ignoreDirectories: '.vscode-test/**'
+    settings:
+      networkIsolationPolicy: AzureActiveDirectory,AzureKeyVault,AzureResourceManager,AzureStorage,Storage,AzureCloud,AzureCloud.centralus,Storage.CentralUS,GitHub.actions,GitHub,CFSClean
     stages:
     - stage: Internal
       jobs:
