--- a/vscode-dotnet-runtime-extension/package.json
+++ b/vscode-dotnet-runtime-extension/package.json
@@ -170,9 +170,9 @@
         "@types/rimraf": "3.0.2",
         "@types/source-map-support": "^0.5.10",
         "@types/vscode": "1.74.0",
+        "@vscode/vsce": "^3.7.1",
         "copy-webpack-plugin": "^9.0.1",
         "rimraf": "^6.1.2",
-        "vsce": "^2.15.0",
         "webpack": "^5.88.2",
         "webpack-cli": "^4.9.1"
     },
